--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "@alilc/lowcode-react-renderer": "^1.3.2",
     "@alilc/lowcode-setter-behavior": "^1.0.0",
     "@alilc/lowcode-setter-title": "^1.0.2",
-    "@ant-design/icons": "^5.3.7",
-    "@ant-design/pro-components": "^2.7.1",
+    "@ant-design/icons": "^4.8.3",
+    "@ant-design/pro-components": "^1.1.1",
     "@umijs/max": "^4.1.10",
-    "antd": "^5.17.0"
+    "antd": "^4.24.16",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
     "@alilc/lowcode-engine": "^1.3.2",
     "@alilc/lowcode-engine-ext": "^1.0.6",
     "@alilc/lowcode-types": "^1.3.2",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^16.14.0",
+    "@types/react-dom": "^16.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
